<resources>

    <string name="app_name">SufferQR</string>
    <string name="nav_open">NavOpen</string>
    <string name="nav_close">NavClose</string>
    <string name="cancel_string">Cancel</string>


    <string name="title_activity_qrdetail">QRDetailActivity</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Image</string>
    <string name="tab_text_3">Location</string>
    <string name="tab_text_4">Comments</string>
    <string name="tab_text_5">Also Scaned</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoiem1haTEzMDEiLCJhIjoiY2xmNmVtMDA4MHMwbzNzcXJjZ3M3Mzh4OCJ9.PNQG4m4kDucnzcQdSMqQ9Q</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_qrdetail_waiting">waiting...</string>
    <string name="qrdetail_privacy_changes_warning">Privacy Settings takes effect upon confirm button pressed</string>
    <string name="qr_detail_loacation_waiting_sign">Location available shortly...</string>
    <string name="qr_detail_image_title">save image content</string>
    <string name="qr_detail_general_visual_text_startup_msg">Available once you scan qr code\n\n\n\n\n To add QR code,go to image page\n and tag the lower botton to scan</string>
    <string name="qr_detail_general_visual_text_tittle">visual representation of yout QRcode</string>
    <string name="qrdetail_image_sign">QRCode content</string>
    <string name="temp_0">0</string>
    <string name="large_text">0</string>


    <string name="total_points_string">Total Points:</string>
    <string name="total_qr_string">Total QR Scanned:</string>
    <string name="highest_string">Highest Score</string>
    <string name="last_scan_string">Last Scan</string>

    <string name="your_rank_string">Your Rank</string>
    <string name="last_scan_number">+%s</string>
    <string name="point_percent">+%.2f\%%</string>
    <string name="point_nPercent">-%.2f\%%</string>
    <string name="zero">0</string>
    <string name="none">None</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="scan_code_photo_library">photo library</string>
    <string name="scna_code_return">Return</string>
    <string name="scan_code_go">GO</string>
    <string name="scan_code_focus_your_camerea_to_a_qr_code">focus your camerea to a QR code</string>

    <string name="title_activity_qrquick_view_scrolling">QRQuickViewScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="points">points</string>
    <string name="surrounding_qrcode">Surrounding QRcode</string>


</resources>