<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.QRDetailImageFragment">

    <!-- location seettings layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/qr_detail_image_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:text="@string/qr_detail_image_title"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/qr_detail_image_enable_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:checked="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <!-- location address info -->
        <TextView
            android:id="@+id/qr_detail_image_privacy_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17sp"
            android:layout_marginRight="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/qrdetail_privacy_changes_warning"
            android:textSize="10sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/qr_detail_image_constraintLayout"
            tools:ignore="SmallSp" />



        <!-- qr code location dusplay -->


        <androidx.cardview.widget.CardView
            android:id="@+id/qr_detail_image_qrimage_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60sp"
            android:layout_marginLeft="17sp"
            android:layout_marginRight="17sp"
            android:layout_marginBottom="80sp"
            app:cardCornerRadius="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/qr_detail_image_qrimage_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_qr_code_example"
                android:scaleType="centerInside"
                android:text="@string/surrounding_qrcode"
                />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>