<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.QRQuickViewGeneralFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_q_r_quick_view_general_cardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="10sp"
            app:cardMaxElevation="5sp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fragment_q_r_quick_view_general_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="author"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    />

                <TextView
                    android:id="@+id/fragment_q_r_quick_view_general_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="date"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/fragment_q_r_quick_view_general_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/points"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_q_r_quick_view_general_visual_cardView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_q_r_quick_view_general_cardView"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            app:cardCornerRadius="10sp"
            app:cardMaxElevation="5sp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_q_r_quick_view_general_textfield"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:textSize="6sp"
                android:hint="@string/qr_detail_general_visual_text_tittle"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:startIconContentDescription="content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_q_r_quick_view_general_general_visual_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/qr_detail_general_visual_text_startup_msg"
                    android:gravity="center"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_q_r_quick_view_general_location_info_cardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            app:cardCornerRadius="10sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_q_r_quick_view_general_visual_cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/fragment_q_r_quick_view_general_location_address_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="address name"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    />

                <TextView
                    android:id="@+id/fragment_q_r_quick_view_general_location_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="address"
                    android:textSize="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="170sp"
                    android:layout_marginBottom="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/fragment_q_r_quick_view_general_go_elevatedButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:text="GO"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="17sp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_q_r_quick_view_general_location_map_cardView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="17sp"
            app:cardCornerRadius="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_q_r_quick_view_general_location_info_cardView">

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/fragment_q_r_quick_view_general_content_map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        </androidx.cardview.widget.CardView>







    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>